# yaas

./: .env-example  Cargo.toml  README.md
.opencode/: opencode.json
frontend/templates/widgets/apps/: search.html
frontend/templates/widgets/org_apps/: search.html
frontend/templates/widgets/org_members/: edit_form.html  search.html  select_member_suggestion.html
frontend/templates/widgets/orgs/: search.html
frontend/templates/widgets/users/: search.html
src/: config.rs  error.rs  run.rs  test.rs
src/db/: app.rs  db.rs  db_pool.rs  mod.rs  oauth_code.rs  org.rs  org_app.rs  org_member.rs  password.rs  superuser.rs  user.rs
src/dto/: actor.rs
src/models/: login.rs
src/services/: auth.rs  oauth.rs
src/web/: mod.rs  oauth.rs
