[package]
name = "yaas"
version = "0.1.0"
edition = "2024"

[dependencies]
askama = { version = "0.15.6" }
argon2 = { version = "0.5.3", features = ["std"] }
axum = { version = "0.8.9", features = ["macros"] }
axum-extra = { version = "0.12.6", features = ["cookie"] }
base64 = "0.22.1"
chrono = { version = "0.4.44", features = ["serde"] }
jsonwebtoken = "10.3.0"
moka = { version = "0.12.15", features = ["sync"] }
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
snafu = { version = "0.9.0" }
tokio = { version = "1.52.1", features = ["full"] }
tower-cookies = "0.11.0"
tower_governor = "0.8"
tower-http = { version = "0.6.8", features = ["fs", "limit", "trace"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
turso = "0.5.3"
url = "2.5.8"
urlencoding = "2.1.3"
uuid = { version = "1.23.1", features = ["v7"] }
validator = { version = "0.20.0", features = ["derive"] }
